# hangzhou

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Untitled  app.py  docker-compose.yml  render.yaml  requirements.txt  start.bat  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.example.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8d6d52d5510a_create_users_and_houses.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  deps.py  houses.py  import_api.py  ml.py  router.py  stats.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  house.py  user.py
backend/app/schemas/: common.py  house.py  ml.py  stats.py  user.py
backend/app/services/: auth_service.py  house_service.py  ml_service.py  stats_service.py
backend/app/utils/: security.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_houses.py  test_import.py  test_stats.py
data/: hangzhou_house_cleaned.csv  hangzhouhouseprice.csv
frontend/: Dockerfile  api_client.py  app.py  auth.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/components/: charts.py  dashboard.py  filters.py  styles.py
frontend/views/: admin.py  data_details.py  prediction.py  price_analysis.py  region_analysis.py  value_discovery.py
src/: auth.py  charts.py  dashboard.py  data.py  filters.py  styles.py
src/pages/: data_details.py  prediction.py  price_analysis.py  region_analysis.py  value_discovery.py
